--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.6.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "q": "^1.5.1",
